data/derived/sp14/progs/unify/prog3842.ml.out
Characters 156-157:
  List.fold_left f base l;;
                        ^
Error: This expression has type string but an expression was expected of type
         'a list
